--- a/maven-web-app-deploy.yml
+++ b/maven-web-app-deploy.yml
@@ -27,11 +27,11 @@ kind: Service
 metadata:
  name: mavenwebappsvc
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
    app: mavenwebapp
   ports:
    - port: 80
      targetPort: 8080
-     nodePort: 30736
+    
 ...
