--- a/maven-web-app-deploy.yml
+++ b/maven-web-app-deploy.yml
@@ -19,6 +19,7 @@ spec:
     containers:
     - name: mavenwebappcontainer
       image: vermakqr/mavenwebapp
+      imagePullPolicy: Always
       ports:
       - containerPort: 8080
 ---
