--- a/maven-web-app-deploy.yml
+++ b/maven-web-app-deploy.yml
@@ -19,7 +19,7 @@ spec:
     containers:
     - name: mavenwebappcontainer
       image: vermakqr/mavenwebapp
-      imagePullPolicy: Always
+      #imagePullPolicy: Always
       ports:
       - containerPort: 8080
 ---
